--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="media-options">
                     <a href="#" class="field google">
-                       <img src="/google-logo-icon-png-transparent-background-osteopathy-16.png" alt="" class="google-img">
+                       <img src="google.png" alt="" class="google-img">
                         <span>Login with Google</span>
                     </a>
                 </div>
